add VITE_CUSTOM_LOGO_PATH_LIGHT_MODE VITE_CUSTOM_LOGO_PATH_DARK_MODE
Signed-off-by: Stefan Kracht <stefan.kracht@direktiv.io>

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@
 # e2e tests will also run against this API
 VITE_DEV_API_DOMAIN="http://api.for.development.com"
 
+# path to custom logos, releative to the root folder. You alway have to provide both
+# paths, one for light mode and one for dark mode.
+VITE_CUSTOM_LOGO_PATH_LIGHT_MODE="/path/to/custom/logo-light-mode.svg"
+VITE_CUSTOM_LOGO_PATH_DARK_MODE="/path/to/custom/logo-dark-mode.svg"
+
 # the base url on which the UI is served, must start and end with a /, can be undefined
 VITE_BASE="/ui/"
 
